manifests/vikunja/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vikunja-redirect-https
  namespace: vikunja
spec:
  redirectScheme:
    scheme: https
    permanent: true
