manifests/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
  annotations:
    external-dns.kubernetes.io/hostname: todo.yornik.eu
    external-dns.kubernetes.io/target: jump.fedishark.eu
    external-dns.kubernetes.io/ttl: "3600"
spec:
  selector:
    app: vikunja
  ports:
    - name: http
      port: 3456
      targetPort: http
      protocol: TCP
