manifests/vikunja/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: vikunja
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`todo.yornik.eu`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
        - name: no-compression
          namespace: traefik
        - name: rate-limit
          namespace: traefik
      services:
        - name: vikunja
          port: 3456
  tls:
    certResolver: letsencrypt
